ready for production

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 3000
-DB_URI = mongodb://localhost:27017/mevn-tutorial
+DB_URI = mongodb://jsphdon:root@cluster0-shard-00-00.hwyvm.mongodb.net:27017,cluster0-shard-00-01.hwyvm.mongodb.net:27017,cluster0-shard-00-02.hwyvm.mongodb.net:27017/myFirstDatabase?ssl=true&replicaSet=atlas-6026zs-shard-0&authSource=admin&retryWrites=true&w=majority
